k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing
  namespace: goalixa-landing
spec:
  selector:
    app: landing
  ports:
    - name: http
      port: 80
      targetPort: http
